force-app/main/default/objects/Account/fields/Branch__c.field-meta.xml
<CustomField>
    <fullName>Branch__c</fullName>
    <description>Ramo con el que trabaja dicho cliente.</description>
    <label>Ramo</label>
    <type>TextArea</type>
</CustomField>