force-app/main/default/objects/Account/fields/CIF__c.field-meta.xml
<CustomField>
    <fullName>CIF__c</fullName>
    <description>Identificador del cliente en su país, DNI/NIE, TC, etc.</description>
    <label>Identificador</label>
    <length>20</length>
    <type>Text</type>
</CustomField>