force-app/main/default/objects/Account/fields/Geographical_scope__c.field-meta.xml
<CustomField>
    <fullName>Geographical_scope__c</fullName>
    <label>Ámbito Geográfico</label>
    <length>90</length>
    <type>Text</type>
</CustomField>