force-app/main/default/objects/Account/fields/IntegrationError__c.field-meta.xml
<CustomField>
    <fullName>IntegrationError__c</fullName>
    <description>Para la gestión de errores de integración en las llamadas de Salesforce a SAP de Simetría</description>
    <label>Error Integración</label>
    <type>TextArea</type>
</CustomField>