force-app/main/default/objects/Account/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <description>Consideraciones adicionales que debe de tener el agente para tratar este proveedor</description>
    <label>Observaciones</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>