force-app/main/default/objects/Account/fields/Phone2__c.field-meta.xml
<CustomField>
    <fullName>Phone2__c</fullName>
    <description>Campo adicional para recoger el teléfono</description>
    <label>Teléfono 2</label>
    <type>Phone</type>
</CustomField>