force-app/main/default/objects/Account/fields/Prevention__c.field-meta.xml
<CustomField>
    <fullName>Prevention__c</fullName>
    <description>Para la gestión del proveedor</description>
    <label>Prevención</label>
    <type>TextArea</type>
</CustomField>