force-app/main/default/objects/Account/fields/SimetriaId__c.field-meta.xml
<CustomField>
    <fullName>SimetriaId__c</fullName>
    <description>Código alfanumérico único que identifica al cliente de forma unívoca. El formato viene de SAP.</description>
    <externalId>true</externalId>
    <label>Código Cliente</label>
    <length>10</length>
    <type>Text</type>
</CustomField>