force-app/main/default/objects/Account/fields/SupplierCategory__c.field-meta.xml
<CustomField>
    <fullName>SupplierCategory__c</fullName>
    <description>Tipo de proveedor, es el sector en el cual trabaja dicho proveedor</description>
    <label>Categoría</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Suministros</fullName>
            </value>
            <value>
                <fullName>Oficios</fullName>
            </value>
            <value>
                <fullName>Servicios Generales</fullName>
            </value>
            <value>
                <fullName>Maquinaria y Equipos</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>