force-app/main/default/objects/Account/fields/SupplierId__c.field-meta.xml
<CustomField>
    <fullName>SupplierId__c</fullName>
    <description>Código alfanumérico único que identifica al proveedor de forma unívoca. El formato viene de SAP.</description>
    <externalId>true</externalId>
    <label>Código Proveedor</label>
    <length>10</length>
    <type>Text</type>
</CustomField>