force-app/main/default/objects/Account/fields/SupplierSubcategory__c.field-meta.xml
<CustomField>
    <fullName>SupplierSubcategory__c</fullName>
    <description>Subtipo del proveedor</description>
    <label>Subcategoría</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Aceites, Lubricantes</fullName>
            </value>
            <value>
                <fullName>Aditivos y productos químicos</fullName>
            </value>
            <value>
                <fullName>Áridos, Gravas</fullName>
            </value>
            <value>
                <fullName>Baños (grifería, sanitarios, mobiliario de baño, mamparas)</fullName>
            </value>
            <value>
                <fullName>Betunes, Emulsiones y MBC</fullName>
            </value>
            <value>
                <fullName>Combustibles</fullName>
            </value>
            <value>
                <fullName>Conducciones ( PE, PVC, fundición, Poliéster, Accesorios tuberías)</fullName>
            </value>
            <value>
                <fullName>Consumibles de Limpieza</fullName>
            </value>
            <value>
                <fullName>Contenedores RSU</fullName>
            </value>
            <value>
                <fullName>Depósitos</fullName>
            </value>
            <value>
                <fullName>Electrodomésticos</fullName>
            </value>
            <value>
                <fullName>Equipamiento Deportivo</fullName>
            </value>
            <value>
                <fullName>Equipos de seguridad individual y colectivos</fullName>
            </value>
            <value>
                <fullName>Ferretería Industrial y Pequeña Herramienta</fullName>
            </value>
            <value>
                <fullName>Fundiciones ( Trapas, Rejillas, canales, etc.)</fullName>
            </value>
            <value>
                <fullName>Gases de soldadura</fullName>
            </value>
            <value>
                <fullName>Grupos Presión / Contraincendios / bombas de achique</fullName>
            </value>
            <value>
                <fullName>Hardware de Seguridad</fullName>
            </value>
            <value>
                <fullName>Hormigones</fullName>
            </value>
            <value>
                <fullName>Imprenta</fullName>
            </value>
            <value>
                <fullName>Ladrillo y Cerámica Decorativa</fullName>
            </value>
            <value>
                <fullName>Material de Oficina</fullName>
            </value>
            <value>
                <fullName>Material Eléctrico</fullName>
            </value>
            <value>
                <fullName>Materiales Férricos</fullName>
            </value>
            <value>
                <fullName>Materiales Generales de Construcción</fullName>
            </value>
            <value>
                <fullName>Materiales y Equipos de Jardinería</fullName>
            </value>
            <value>
                <fullName>Mobiliario</fullName>
            </value>
            <value>
                <fullName>Mobiliario urbano ( Bancos, papeleras, hitos, jardineras, Juegos Infantiles, etc.)</fullName>
            </value>
            <value>
                <fullName>Neumáticos y Repuestos Maquinaria</fullName>
            </value>
            <value>
                <fullName>Otros Consumibles</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>