force-app/main/default/objects/Account/fields/SupplierType__c.field-meta.xml
<CustomField>
    <fullName>SupplierType__c</fullName>
    <description>Clasificación para el proveedor, homologado o no homologado.</description>
    <label>Clasificación</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Homologado</fullName>
            </value>
            <value>
                <fullName>No Homologado</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>