force-app/main/default/objects/Account/fields/Zone1__c.field-meta.xml
<CustomField>
    <fullName>Zone1__c</fullName>
    <description>Zona comercial del cliente</description>
    <label>Zona Comercial 1</label>
    <length>90</length>
    <type>Text</type>
</CustomField>