force-app/main/default/objects/Account/fields/Zone2__c.field-meta.xml
<CustomField>
    <fullName>Zone2__c</fullName>
    <description>Zona comercial adicional del cliente</description>
    <label>Zona Comercial 2</label>
    <length>90</length>
    <type>Text</type>
</CustomField>