force-app/main/default/objects/Account/fields/Zone3__c.field-meta.xml
<CustomField>
    <fullName>Zone3__c</fullName>
    <description>Zona comercial adicional del cliente</description>
    <label>Zona Comercial 3</label>
    <length>90</length>
    <type>Text</type>
</CustomField>