force-app/main/default/objects/Account/recordTypes/Simetria_Account.recordType-meta.xml
<RecordType>
    <fullName>Simetria_Account</fullName>
    <active>true</active>
    <label>Cliente</label>
</RecordType>